--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,10 @@
 {
     "version": 2,
-    "name": "mindx"
+    "name": "mindx",
     "builds": [
-        "src": "index.js",
-        "use": "@vercel/node"
+       { "src": "index.js", "use": "@vercel/node" }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.js",
-        }
+       { "src": "/(.*)", "dest": "/index.js" }
     ]
-}
+ }
